--- a/index.html
+++ b/index.html
@@ -659,7 +659,7 @@
                     </ul>
                 </div>
                 <div class="about-image">
-                    <img src="C:\Users\yarra\Downloads\babu123.jpg" 
+                    <img src="./assets/babu123.jpg" 
                          alt="Babu the Photographer" width="300" height="300">
                 </div>
             </div>
